--- a/web/alembic.ini
+++ b/web/alembic.ini
@@ -55,6 +55,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
+# remove from version control after initial configuration ------ BCX BCX said so
 sqlalchemy.url = postgresql://username:password@postgres_db:5432/database_name
 
 
